# application

./: .gitignore  .nojekyll  Dockerfile  README.md  _quarto.yml  check.py  index.html  index.qmd  install.sh  main.py  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  test.csv  titanic.py  train.csv  train.py
.github/workflows/: docker.yaml  prod.yaml  test.yaml  website.yaml
.quarto/idx/: index.qmd.json
.quarto/idx/notebooks/: titanic.ipynb.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 8d595b71  INDEX  bc9bf536
_site/: index.html  search.json
_site/notebooks/: titanic.html
_site/site_libs/bootstrap/: bootstrap-bd4dcc9e30d9a806c46b11061eaede09.min.css
app/: api.py  run.sh
deployment/: deployment.yaml
notebooks/: titanic.html  titanic.ipynb
src/validation/: check.py
validation/: check.py
