[project]
name = "application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.128.7",
    "mlflow==3.10.0",
    "pandas<3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "skops>=0.13.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.1",
]
